# rxls

./: .gitattributes  .gitignore  API-COMPATIBILITY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EDITING-CONTRACT.md  LICENSE  MIGRATION-1.0.md  OUTPUT-CONTRACTS.md  PERFORMANCE.md  README.md  ROADMAP-0.1.2.md  THIRD_PARTY_LICENSES.md  deny.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  release.yml  render-browser.yml  render-hardening.yml  render-oracle.yml  render-package-release.yml
bindings/render-wasm/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.txt  package.json  toolchain-lock.json
bindings/render-wasm/js/: client.mjs  protocol.mjs  worker-runtime.mjs  worker.mjs
bindings/render-wasm/scripts/: build-wasm.mjs
bindings/render-wasm/src/: lib.rs
bindings/render-wasm/tests/: browser-lifecycle.test.mjs  client.test.mjs  protocol.test.mjs  worker-runtime.test.mjs
bindings/render-wasm/tests/browser/: bootstrap.mjs  index.html  installed-package-bootstrap.mjs  installed-package.html  installed-package.mjs  lifecycle.mjs  run.mjs  smoke.mjs
bindings/wasm/: Cargo.toml
bindings/wasm/demo/: app.js  index.html
bindings/wasm/examples/: native-fixture-outputs.rs
bindings/wasm/npm/: README.md  package.json
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: browser-smoke.mjs  fixture-matrix.cjs  node-smoke.cjs  package-consumer-smoke.mjs
bindings/wasm/tests/fixtures/: macro-enabled.xlsm.b64
docs/: READER_FIDELITY.md
examples/: api_journeys.rs  author_report.rs  edit_save_benchmark.rs  extract.rs  metadata.rs  robustness.rs  roundtrip.rs  to_xlsx.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: author.rs  edit.rs  formula.rs  parse.rs
fuzz/seeds/: manifest.json
oss-fuzz/projects/rxls/: Dockerfile  build.sh  project.yaml
render/: Cargo.toml  README.md
render/fuzz/: Cargo.toml
render/fuzz/fuzz_targets/: backend_command_replay.rs  chart_range_resolution.rs  image_headers.rs  pagination.rs  snapshot_construction.rs  support.rs  svg_emission.rs
render/fuzz/seeds/: manifest.json
render/fuzz/seeds/backend_command_replay/: output-limits  path-state
render/fuzz/seeds/chart_range_resolution/: full-grid  malformed-a1
render/fuzz/seeds/image_headers/: jpeg-bomb  png-bomb
render/fuzz/seeds/pagination/: fit-repeat  invalid-geometry
render/fuzz/seeds/snapshot_construction/: basic-grid  hostile-xml
render/fuzz/seeds/svg_emission/: escaped-text  extreme-fixed
render/perf/: Cargo.toml
render/perf/src/: main.rs
render/src/: error.rs  font.rs  layout.rs  lib.rs  main.rs  media.rs  pdf.rs  png.rs  print.rs  scene.rs  svg.rs  typography.rs
render/tests/: absolute_drawing_print.rs  absolute_drawings.rs  chart_fidelity.rs  printing.rs  rendering.rs  resource_limits.rs  rtl_geometry.rs  used_range.rs
scripts/: build-wasm-package.sh  check-authored-print-parity.py  check-render-fidelity-targets.py  check-render-parity-baseline.py  check_core_package.py  check_public_api.py  check_release_identity.py  check_render_oracle_release_evidence.py  check_render_package.py  check_wasm_package.py  check_workflow_policy.py  compare-render-parity-runs.py  compare_release_bundles.py  corpus-head-to-head.py  fetch-public-corpus.py  fetch-render-corpus.py  fetch-render-fonts.py  fetch-xls-reference.sh  fuzz_seeds.py  generate-fixtures.py  generate-performance-fixture.py  generate-render-corpus.py  generate-sbom.py  libreoffice-render-parity.py  measure-performance.py  merge-render-parity-reports.py  ods-odfpy-parity.py  oracle_timeout.py  public_corpus_manifest.py  public_hygiene_audit.py  record_toolchain_versions.py  release_manifest.py  render-corpus-sources.json  render-fonts-lock.json  render-oracle-host-profile.xcu  render-oracle-host-requirements.txt  render-oracle-host-tools-lock.json  render-oracle-host-tools.py  render-oracle-lock.json  render-performance-gates.py  (+45 more)
scripts/render-oracle-container/: Containerfile  README.md  lock.json  oracle-entrypoint.sh
scripts/render-oracle-container/profile/: registrymodifications.xcu
src/: error.rs  eval.rs  export.rs  format.rs  ftab.rs  lib.rs  main.rs  model.rs  number_format.rs  ods.rs  ole.rs  package.rs  provenance.rs  ptg.rs  report.rs  spreadsheet.rs  sst.rs  wasm.rs  xls.rs  xlsb.rs  xlsx.rs  xmltree.rs  ziputil.rs
src/write/: cell.rs  comment.rs  drawing.rs  mod.rs  styles.rs  table.rs  validate.rs  workbook.rs  worksheet.rs  xml.rs
tests/: api_contract.rs  cli.rs  integration.rs
tests/fixtures/: MANIFEST.json  README.md
tests/fixtures/formula/: formula-source.xlsx
tests/fixtures/formula/biff8/: formula-source.xls
tests/fixtures/ods/: repeated-hidden.ods
tests/fixtures/xls/: korean-cp949-biff5.xls  korean-unicode-biff8.xls  reader-basic.xls
tests/fixtures/xlsb/: reader-basic.xlsb
tests/fixtures/xlsx/: reader-structural.xlsx
tests/golden/: diagnose-v1.json  diagnose-v2.json
tests/oracles/: formula-source-fixtures.tsv  public-api-0.1.2.json  public-api-main.json  public-corpus-baseline.json  public-corpus-expectations.json  xlsb-visible-values.json
