# cargo-fuzz harness — run with `cargo +nightly fuzz run parse` (Linux/macOS).
# `[workspace]` detaches this from any parent workspace.
[package]
name = "rxls-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1"

[dependencies.rxls]
path = ".."
features = ["xlsx"]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "author"
path = "fuzz_targets/author.rs"
test = false
doc = false
bench = false

[[bin]]
name = "edit"
path = "fuzz_targets/edit.rs"
test = false
doc = false
bench = false
