[package]
name = "rxls-render"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Deterministic, bounded worksheet rendering for rxls"
publish = false

[lib]
name = "rxls_render"
path = "src/lib.rs"

[[bin]]
name = "rxls-render"
path = "src/main.rs"

[dependencies]
flate2 = "1.1.9"
jpeg-decoder = "0.3.2"
png = "0.17.16"
rxls = { version = "0.1.2", path = "..", default-features = false, features = ["xlsb", "ods"] }
rustybuzz = "0.20.1"
serde_json = "1"
sha2 = "0.10"
ttf-parser = "0.25.1"
tiny-skia = "0.11.4"
unicode-bidi = "0.3.18"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.12.0"

[dev-dependencies]
zip = { version = "2.2", default-features = false, features = ["deflate"] }
