[package]
name = "rxls-render-wasm"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Bounded browser worker facade for deterministic rxls rendering"
repository = "https://github.com/HyunjoJung/rxls"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.103"
rxls = { version = "0.1.2", path = "../..", default-features = false, features = ["full"] }
rxls-render = { version = "0.1.0", path = "../../render" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.126"

# The browser artifact has a strict size budget. Keep this profile local to the
# WASM package so native rxls and renderer release builds retain their own
# optimization policy.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
