[package]
name = "rxls-wasm"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "WebAssembly bindings for the rxls spreadsheet library"
repository = "https://github.com/HyunjoJung/rxls"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.103"
rxls = { path = "../..", default-features = false, features = ["full"] }
wasm-bindgen = "0.2.126"
