[package]
name = "rxls-render-perf"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace]

[dependencies]
serde_json = "1"
sha2 = "0.10"

[dependencies.rxls]
path = "../.."
default-features = false

[dependencies.rxls-render]
path = ".."

[[bin]]
name = "rxls-render-perf"
path = "src/main.rs"
